--- a/grgrowth/src/main/webapp/css/style.css
+++ b/grgrowth/src/main/webapp/css/style.css
@@ -28,7 +28,7 @@ table, th, td {vertical-align:middle;}
 blockquote:before, blockquote:after, q:before, q:after {content:'';}
 blockquote, q {quotes:"" "";}
 a img {border:none;}
-:focus {outline:0;}
+/* :focus {outline:0;} */
 ol, ul {list-style:none;}
 li {line-height:120%;}
 dt { font-weight: bold; text-decoration: underline; } dd { margin: 0; padding: 0 0 0.5em 0; }
