--- a/grgrowth/src/main/webapp/css/green.css
+++ b/grgrowth/src/main/webapp/css/green.css
@@ -696,4 +696,37 @@ a, a:hover {text-decoration:none;color:#05b99b;}
 /*알리미 2012.04.02*/
 .alimy {border-collapse:collapse; border-spacing:0; border:5px solid #00b497; width:605px;}
 
-.screen_out{display:block;overflow:hidden;position:absolute;left:-9999px;width:1px;height:1px;font-size:0;line-height:0;text-indent:-9999px}
+.screen_out{display:block;overflow:hidden;position:absolute;left:-9999px;width:1px;height:1px;font-size:0;line-height:0;text-indent:-9999px} 
+
+
+/* hmake 웹전근성 수정 추가 */
+.screen_out2 a {z-index:100000;position:absolute;top:0;left:0;width:1px;height:1px;font-size:0;line-height:0;overflow:hidden}
+.screen_out2 a:focus, #skip_to_container a:active {width:100%;height:75px;background:#21272e;color:#fff;font-size:2em;font-weight:bold;text-align:center;text-decoration:none;line-height:3.3em}
+
+
+#nav {position:absolute; left:180px; top:45px; width:760px; font-size:12px;list-style:none;}
+#nav li a { text-decoration:none; display:block; margin:0; float:left; }
+
+#nav {position:absolute; left:180px; top:45px; width:760px; font-size:12px;list-style:none;}
+#nav li {float:left; margin-left:30px; width:128px;}
+#nav li a {color:#000;display:block;padding:0px 0px;height:44px;}
+#nav li a:hover, #nav li a:focus, #nav li.current_page_item a, #nav li.current-cat a, #nav li.current-menu-item a {color:#fff;}
+
+#nav li ul { display:none; }
+#nav li ul.on { display:block; margin-top:45px; }	
+#nav li ul { background-color:#09b89d;position:absolute;z-index:999;width:147px;padding:5px; }
+#nav li ul li {float:none;margin:0;}
+#nav li ul li a{color:#fff;width:127px; font-weight:bold; padding:3px 10px;margin:0;height:16px;margin-top:4px;}
+#nav li ul li a.sf-with-ul { /* Dropdown li class which has another sub ul under */padding:3px 10px;}
+#nav li ul li a:hover, #nav li ul li a:focus {color:#ffee34;}
+
+#nav li ul ul {background:#018a75; margin:-0px 0 0 148px;padding-top:0; width:180px;}
+#nav li ul ul li a {color:#fff; width:180px;padding:3px;margin:0;height:16px;margin-top:5px;}
+/* List items that contains sub ul */
+
+.sub-depth {background: url(/images/main/arrow-superfish-right.png) no-repeat right center;}
+
+.hmake01 { margin-top:-5px !important; }
+.hmake02 { margin-top:25px !important; }
+
+/* hmake 웹전근성 수정 추가 완료 */
